# pre-commit-hooks-sbt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: test-ci.yaml
src/pre_commit_sbt/: port_file.py  run_sbt_command.py
src/pre_commit_sbt/args/: parse_args.py
src/pre_commit_sbt/command_runners/: lsp_runner.py  shell_runner.py
src/pre_commit_sbt/command_runners/lsp/: conn.py  port_file.py  request.py  response.py  rpc.py  server.py
src/pre_commit_sbt/err/: error_msgs.py  exceptions.py  failed_command_error.py
src/pre_commit_sbt/lsp/: error_codes.py  port_file.py  receive.py  server.py
src/pre_commit_sbt/sbt/: unix_shell.py
testing/project_with_scalafmt_command/: .scalafmt.conf
tests/: conftest.py
tests/behaviour/features/: scalafmt.feature  test_config.json  test_scalafmt.py
tests/e2e/: scalafmt_pre_commit_hook_e2e_test.py
tests/e2e/test_utils/: pre_commit.py
tests/integration/: conftest.py  run_sbt_command_integration_test.py  run_sbt_command_test.py
tests/integration/command_runners/: lsp_runner_integration_test.py  shell_runner_integration_test.py
tests/integration/command_runners/lsp/: port_file_integration_test.py  request_integration_test.py  request_response_integration_test.py  server_integration_test.py
tests/integration/lsp/: port_file_integration_test.py  rpc_integration_test.py  server_integration_test.py
tests/integration/pre_commit_integration/: scalafmt_pre_commit_hook_integration_test.py
tests/integration/test_utils/: pre_commit.py  text.py
tests/testing_utils/: file.py  git.py  pre_commit.py  sbt.py
tests/unit/: port_file_test.py  run_sbt_command_test.py
tests/unit/args/: parse_args_test.py
tests/unit/command_runners/lsp/: conn_test.py  port_file_test.py  receive_test.py  response_test.py  server_test.py
tests/unit/lsp/: conn_test.py  port_file_test.py  receive_test.py  server_test.py
