[build-system]
requires = [
    "setuptools >= 65.4.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-sbt"
version = "0.0.1beta"
description = "A set of pre-commit hooks which integrate well with SBT (for scala)."
readme = "README.md"

[project.optional-dependencies]
dev = [
    "mypy==0.982",
    "pre-commit==2.20.0",
    "pylint==2.15.3",
    "pytest==7.1.3",
    "pytest-asyncio==0.19.0",
    "tox==3.26.0",
]

[project.scripts]
run-sbt-command = "pre_commit_sbt.run_sbt_command:main"

[tool]

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]
good-names = ["f"]
max-line-length = 120

[tool.setuptools.package-data]
pre_commit_sbt = ["py.typed"]
