[build-system]
requires = [
    "setuptools >= 65.6.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-sbt"
version = "1.0.1"
description = "A set of pre-commit hooks which integrate well with SBT (for scala)."
readme = "README.md"

[project.optional-dependencies]
dev = [
    "mypy==0.991",
    "pre-commit==2.21.0",
    "pylint==2.15.9",
    "pytest==7.2.0",
    "pytest-bdd==6.1.1",
    "tox==4.1.3",
]

[project.scripts]
run-sbt-command = "pre_commit_sbt.run_sbt_command:main"

[tool]

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]
good-names = ["f", "fp", "ex"]
max-line-length = 120

[tool.setuptools.package-data]
pre_commit_sbt = ["py.typed"]
